# quick-review

./: .gitignore  Cargo.toml  README.md
src/: agent_reviewer.rs  cli.rs  lib.rs  main.rs  mcp_provider.rs  pr_url.rs  review_input.rs  review_pipeline.rs  review_result.rs
src/review_agent/: agent.rs  mcp_review_tools.rs  mod.rs  prompts.rs  review_tools.rs
tests/: review_agent_prompts.rs  review_agent_tools.rs
