[package]
name = "quick-review"
version = "0.1.0"
edition = "2021"
description = "Agent-powered code review for GitHub PR / GitLab MR"
authors = []

[dependencies]
# langgraph-rust: ReAct agent (git until published)
langgraph = { git = "https://github.com/caiuschou/langgraph-rust", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "quick-review"
path = "src/main.rs"
